package io.github.spiritstead.collision;

public interface Collision {
    public void check();
}
